--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@img-comparison-slider/vue": "^8.0.0",
+    "swiper": "^11.1.15",
     "vue": "^3.5.12",
     "vue-router": "^4.5.0",
     "vue3-carousel": "^0.8.1"
